# Roadie

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  QUICKSTART.md  README.md  ROADIE_SETUP.md  USAGE.md  catalog-info.yaml  claude_desktop_config.example.json  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  deploy.yml
catalog/: DOMAINS.md  catalog-info.yaml  domains.yaml  eulen-api-catalog.yaml  eulen-api.yaml  eulen-frontend-catalog.yaml  eulen-spring-catalog.yaml  eulen-system.yaml  groups.yaml  openapi.yaml
docs/: EJEMPLOS-AVANZADOS.md  FAQ.md  GUIA-INICIO-RAPIDO.md  INDEX.md  api.md  frontend.md  index.md  spring.md
examples/: api.yaml  catalog-info.yaml  domain.yaml  group.yaml  resource.yaml  system.yaml  user.yaml
examples/my-first-component/: README.md  package.json
examples/my-first-component/src/: index.ts  plugin.ts  routes.ts
scaffolder-templates/: README.md  TROUBLESHOOTING.md  angular-component.yaml  nodejs-api.yaml  spring-boot-service.yaml
scaffolder-templates/skeleton/angular/: README.md  catalog-info.yaml  package.json
scaffolder-templates/skeleton/nodejs-api/: README.md  catalog-info.yaml  openapi.yaml  package.json
scaffolder-templates/skeleton/nodejs-api/src/: index.js
scaffolder-templates/skeleton/spring-boot/: README.md  catalog-info.yaml  pom.xml
scripts/: create-from-template.ps1  validate_catalog.py
src/roadie_mcp_server/: __init__.py  server.py  templates.py
templates/: catalog-info.yaml  mkdocs.yml  scaffolder-template.yaml
tools/: compressor.py  ftp_explorer.py
(+2 files in other folders)
