[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadie-mcp-server"
version = "0.1.0"
description = "MCP Server providing Roadie/Backstage expertise and YAML templates"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "roadie", "backstage", "yaml", "templates"]
authors = [
    {name = "AngC1"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
roadie-mcp-server = "roadie_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["roadie_mcp_server*"]
